@@ -85,6 +85,7 @@
  * bugfix: in some situations fim -o fb was not clearing the screen before drawing the image
  * bugfix in the "list 'remove'" internals
  * --binary=1/--binary=24 will not pad tiny renderings to _preferred_rendering_width pixels
+ * corrected the quiet mode (-q) to be quieter
 
                 Version 0.4
 
